--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -2,7 +2,7 @@ body {
     color: #9366e7;
     text-align:left;
     background-color: #000c74;
-    font-family: 'Times New Roman'; 
+    font-family: Arial; 
     font-size: 16px;
 }
 
